# codegen-agent

./: .gitattributes  .gitignore  pyproject.toml  readme.md
.devcontainer/: .bash_history  .bashrc  Dockerfile  devcontainer.json
codegen_agent/core/: __init__.py  llm_client.py  llm_service.py  models.py  mylog.py  mypath_and_key.py  workflow.py
codegen_agent/core/execution/: docker_runtime.py  prelude.py  runner.py
codegen_agent/ipy/: display.py  magic_agent.py
samples/: basic.py  codegen_then_exec.py  container_debug.py  container_safety.py  e2e_gemini.py  large_variable_passthrough.py  workflow_retry.py
sandbox/: Dockerfile.runner
