[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codegen-agent"
version = "0.1.0"
description = "Sandboxed execution and LLM agent workflow with Docker-backed isolation."
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker>=7.0.0",
    "diskcache>=5.6.3",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "autogen-agentchat",
    "pandas",
    "dotenv",
    "autogen-ext[openai, diskcache]",
    "lettuce_logger @ git+https://github.com/yoki/lettuce_logger.git@v0.1.2",
    "mydevtools @ git+https://github.com/yoki/mydevtools.git@v0.1.2",
    "typing-extensions>=4.12.2"
]

[project.optional-dependencies]
jupyter = ["jupyter", "ipython"]

[tool.setuptools.packages.find]
where = ["."]
include = ["codegen_agent*"]

[tool.setuptools]
package-dir = { "" = "." }
